style.css
/* ... */
div.footer-content
	{ width: 100%; max-width: 669px; margin-left: auto; margin-right: auto; padding: 10px 20px; color: #ffffff; 
	  font-size: 13px; font-size: 0.8125rem; }

@media screen and (min-width: 970px) {
	div.footer-content
		{ max-width: 970px; }
}

div.footer-content a
	{ color: #ffffff; }

div.footer-content a:hover
	{ text-decoration: underline; }

div.footer-content h1
	{ color: #ffffff; }

.footer-widget-area
	{ background: #84b414; background: #3f7410; }

.footer-widget-area .widget
	{ width: auto; }

.site-info
	{ background: #305f05; }

#copy-info
	{ float: left; }

#footer-meta-navigation
	{ float: right; }
	
/*--------------------------------------------------------------
# Infinite scroll
--------------------------------------------------------------*/
/* Globally hidden elements when Infinite Scroll is supported and in use. */
.infinite-scroll .posts-navigation, /* Older / Newer Posts Navigation (always hidden) */
.infinite-scroll.neverending .site-footer /* Theme Footer (when set to scrolling) */
	{ display: none; }

/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before. */
.infinity-end.neverending .site-footer
	{ display: block; }

/*--------------------------------------------------------------
# Media
--------------------------------------------------------------*/
.page-content .wp-smiley, .entry-content .wp-smiley, .comment-content .wp-smiley
	{ border: none; margin-bottom: 0; margin-top: 0; padding: 0; }

/* Make sure embeds and iframes fit their containers. */
embed, iframe, object 
	{ max-width: 100%; }

/*--------------------------------------------------------------
## Captions
--------------------------------------------------------------*/
.wp-caption
	{ margin-bottom: 1.5em; max-width: 100%; }

.wp-caption img[class*="wp-image-"]
	{ display: block; margin: 0 auto; }

.wp-caption-text
	{ text-align: center; }

.wp-caption .wp-caption-text 
	{ margin: 0.8075em 0; }

/*--------------------------------------------------------------
## Galleries
--------------------------------------------------------------*/
.gallery 
	{ margin-bottom: 1.5em; }
	
.gallery-item 
	{ display: inline-block; text-align: center; vertical-align: top; width: 100%; }
	
.gallery-columns-2 .gallery-item 
	{ max-width: 50%; }
	
.gallery-columns-3 .gallery-item 
	{ max-width: 33.33%; }
	
.gallery-columns-4 .gallery-item 
	{ max-width: 25%; }
	
.gallery-columns-5 .gallery-item 
	{ max-width: 20%; }
	
.gallery-columns-6 .gallery-item 
	{ max-width: 16.66%; }
	
.gallery-columns-7 .gallery-item 
	{ max-width: 14.28%; }
	
.gallery-columns-8 .gallery-item 
	{ max-width: 12.5%; }
	
.gallery-columns-9 .gallery-item 
	{ max-width: 11.11%; }
	
.gallery-caption 
	{ display: block; }
	

/*--------------------------------------------------------------
# Widgets Content
--------------------------------------------------------------*/
aside.widget_rss h1.widget-title a.rsswidget:first-of-type
	{ display: none; }
	
aside.widget_rss h1.widget-title a.rsswidget:visited
	{ color: #e10078; }

aside.widget_rss ul
	{ padding: 0; list-style-type: none; }

aside.widget_rss ul li
	{ margin-bottom: 10px; }

aside.widget_rss ul li:not(:first-of-type):before
	{ background:-moz-linear-gradient( left, #F3F3F3 0%,#DDDDDD 50%,#F3F3F3 100% ); 
	  background:-webkit-linear-gradient( left, #F3F3F3 0%,#DDDDDD 50%,#F3F3F3 100% ); 
	  background:linear-gradient( left, #F3F3F3 0%,#DDDDDD 50%,#F3F3F3 100% );
	  content: ''; height: 1px; display: block; margin-bottom: 7px; }

aside.widget_rss ul li span.rss-date
	{ display: block; color: #666666; margin-left: 15px; }

